--- a/writeup/Replication Report Template.qmd
+++ b/writeup/Replication Report Template.qmd
@@ -43,6 +43,12 @@ Stimuli were grayscale composite faces from the Chicago Face Database. I generat
 
 ## Methods
 
+### Note on Pilot Studies
+
+Two pilot studies were conducted prior to preregistered data collection.  
+Pilot A tested an early version of the task with a longer trial structure, while Pilot B implemented the finalized version used for the preregistered design.  
+All confirmatory analyses in the present report refer to Pilot B, whereas Pilot A is included for completeness and design validation.
+
 ### Power Analysis
 
 Original effect size, power analysis for samples to achieve 80%, 90%, 95% power to detect that effect size.  Considerations of feasibility for selecting planned sample size.
@@ -123,50 +129,536 @@ Anticipated impct: My analysis plan matches the original closely, and difference
 
 ### Methods Addendum (Post Data Collection)
 
-You can comment this section out prior to final report with data collection.
-
 #### Actual Sample
-  Sample size, demographics, data exclusions based on rules spelled out in analysis plan
+Fifty participants were recruited via Prolific. All participants were adults and reported normal or corrected-to-normal vision. Data were screened using the preregistered exclusion criteria: trials with reaction times shorter than 200 ms or longer than 3000 ms were excluded, as were incomplete or invalid responses. After applying these criteria, all 50 participants were retained for analysis.
 
 #### Differences from pre-data collection methods plan
-  Any differences from what was described as the original plan, or “none”.
-
+The preregistered target sample size was N = 72. Data collection was stopped at N = 50 due to time constraints. No other deviations from the preregistered methods or analysis plan were made.
 
 ## Results
+### Pilot A (Preliminary Implementation)
+Pilot A was conducted on October 26, 2025, using an early version of the jsPsych composite task.  
+This version unintentionally included a larger number of trials (~704 total), which made the session longer and helped identify design adjustments for the final study.  
+Two participants completed Pilot A.
+
+#### Data Loading and Preprocessing
+```{r}
+library(tidyverse)
+
+data1 <- read_csv("~/Downloads/compositeface_20251026_213322.csv") %>%
+  mutate(Participant = "P1")
+
+data2 <- read_csv("~/Downloads/compositeface_20251026_230456.csv") %>%
+  mutate(Participant = "P2")
+# Combine into one dataset
+data_all <- bind_rows(data1, data2)
+
+# Preprocess
+df <- data_all %>%
+  select(-rt) %>%  # remove lowercase duplicate column
+  filter(trial_frame == "test_face") %>%
+  rename(
+    is_aligned   = Alignment,
+    is_congruent = Congruency,
+    rt           = RT
+  ) %>%
+  select(Participant, is_aligned, is_congruent, Correct, rt)
+
+# Summary statistics
+summary_df <- df %>%
+  group_by(Participant, is_aligned, is_congruent) %>%
+  summarise(
+    mean_acc = mean(Correct, na.rm = TRUE),
+    mean_rt  = mean(rt, na.rm = TRUE),
+    n = n(),
+    .groups = "drop"
+  )
+
+summary_df
+```
+#### Accuracy by Condition
+```{r}
+ggplot(summary_df, aes(x = is_congruent, y = mean_acc, fill = is_aligned)) +
+geom_bar(stat = "identity", position = position_dodge()) +
+facet_wrap(~ Participant) +
+labs(
+title = "Pilot A: Accuracy by Congruency and Alignment",
+x = "Congruency",
+y = "Mean Accuracy",
+fill = "Alignment"
+) +
+theme_minimal()
+
+```
+
+#### Reaction Time by Condition
+```{r}
+ggplot(summary_df, aes(x = is_congruent, y = mean_rt, fill = is_aligned)) +
+geom_bar(stat = "identity", position = position_dodge()) +
+facet_wrap(~ Participant) +
+labs(
+title = "Pilot A: Reaction Time by Congruency and Alignment",
+x = "Congruency",
+y = "Mean RT (ms)",
+fill = "Alignment"
+) +
+theme_minimal()
+
+```
+#### Notes on Pilot A
+Pilot A revealed several issues that informed updates for Pilot B:
+The session duration was too long (~704 trials) and risked fatigue. This motivated reducing the number of repetitions per cell.
+The overall alignment × congruency pattern was visible but noisy due to only two participants.
+Minor issues with file naming and duplicate RT columns were corrected before Pilot B.
+
+### Pilot B (Finalized Implementation)
+
+Pilot B was collected on November 29, 2025, using the finalized version of the jsPsych composite task.  
+This version implemented the full 2 × 2 × 2 × 2 composite design while reducing repetitions per condition to keep the task feasible for online data collection.
+
+Two participants completed Pilot B. The purpose of Pilot B was to (a) verify the corrected trial structure, (b) ensure timing and branching logic worked as intended, and (c) confirm that the expected Congruency × Alignment pattern emerged in a clean dataset.
+#### Data Import and Initial Inspection
+```{r}
+library(tidyverse)
+library(lme4)
+library(ggplot2)
+
+d1 <- read_csv("~/replication_jin2024/data/compositeface_20251129_161517.csv")
+d2 <- read_csv("~/replication_jin2024/data/compositeface_20251129_162056.csv")
+
+raw <- bind_rows(d1, d2)
+
+dim(raw)
+head(raw)
+```
+#### Filtering to Experimental Trials
+
+```{r}
+df <- raw %>%
+filter(
+trial_type == "image-keyboard-response",
+!is.na(SameDifferent),
+!is.na(Congruency),
+!is.na(Alignment),
+!is.na(Cue)
+)
+
+dim(df)
+head(df)
+
+```
+
+#### Cleaning and Variable Setup
+
+```{r}
+df <- df %>%
+mutate(
+Subject = factor(Subject),
+Congruency = factor(Congruency, levels = c("congruent", "incongruent")),
+Alignment = factor(Alignment, levels = c("aligned", "misaligned")),
+Cue = factor(Cue, levels = c("top", "bot")),
+SameDifferent = factor(SameDifferent, levels = c("same", "different")),
+Correct = as.numeric(Correct),
+RT = as.numeric(RT)
+)
+
+# RT Exclusions
+df <- df %>% filter(RT > 200, RT < 3000)
+nrow(df)
+
+```
+
+##### Confirmatory Model: Accuracy (GLMM)
+Logistic mixed-effects model predicting accuracy from Congruency, Alignment, and their interaction, with a random intercept for Subject. This model tests whether the expected Congruency × Alignment interaction (i.e., strongest interference in aligned–incongruent condition) is present.
+```{r}
+acc_model <- glmer(
+Correct ~ Congruency * Alignment + (1 | Subject),
+data = df,
+family = binomial,
+control = glmerControl(optimizer = "bobyqa")
+)
+
+summary(acc_model)
+
+```
+#### RT Analysis (LMER)
+
+```{r}
+# Z-scoring RTs within Subject
+df <- df %>%
+group_by(Subject) %>%
+mutate(RT_z = scale(RT)[,1]) %>%
+ungroup()
+
+# Linear Mixed-Effects Model on RT
+rt_model <- lmer(
+RT_z ~ Congruency * Alignment + (1 | Subject),
+data = df %>% filter(Correct == 1)
+)
+
+summary(rt_model)
+
+```
+#### Descriptive Plots
+Accuracy Summary
+```{r}
+# Accuracy Summary
+acc_summary <- df %>%
+group_by(Congruency, Alignment) %>%
+summarise(acc = mean(Correct))
+
+ggplot(acc_summary, aes(Congruency, acc, fill = Alignment)) +
+geom_col(position = "dodge") +
+labs(title = "Pilot B: Accuracy by Condition",
+y = "Accuracy") +
+theme_minimal()
+
+```
+Reaction Time Summary
+
+```{r}
+# Reaction Time Summary
+rt_summary <- df %>%
+filter(Correct == 1) %>%
+group_by(Congruency, Alignment) %>%
+summarise(rt = mean(RT))
+
+ggplot(rt_summary, aes(Congruency, rt, fill = Alignment)) +
+geom_col(position = "dodge") +
+labs(title = "Pilot B: Reaction Time (Correct Trials)",
+y = "RT (ms)") +
+theme_minimal()
+
+```
+RT Plot (Paper-Style)
+```{r}
+rt_summary2 <- df %>%
+filter(Correct == 1) %>%
+group_by(Alignment, Congruency) %>%
+summarise(
+mean_rt = mean(RT),
+se_rt = sd(RT) / sqrt(n()),
+.groups = "drop"
+)
+
+ggplot(rt_summary2, aes(x = Alignment, y = mean_rt, color = Congruency)) +
+geom_point(size = 3, position = position_dodge(width = 0.4)) +
+geom_errorbar(
+aes(ymin = mean_rt - se_rt, ymax = mean_rt + se_rt),
+width = 0.1,
+position = position_dodge(width = 0.4)
+) +
+labs(title = "Pilot B Reaction Time (Paper-Style Format)",
+y = "RT (ms)", x = "Alignment") +
+coord_cartesian(ylim = c(600, 1400)) +
+theme_minimal(base_size = 14)
+
+```
+
+d′ Analysis (Sensitivity)
+
+```{r}
+compute_dprime <- function(hits, fas, n_hit, n_fa) {
+hit_rate <- (hits + 0.5) / (n_hit + 1)
+fa_rate  <- (fas + 0.5) / (n_fa + 1)
+qnorm(hit_rate) - qnorm(fa_rate)
+}
+
+dp <- df %>%
+group_by(Subject, Congruency, Alignment) %>%
+summarise(
+hits = sum(Correct == 1 & SameDifferent == "same"),
+fas  = sum(Correct == 0 & SameDifferent == "different"),
+n_hit = sum(SameDifferent == "same"),
+n_fa  = sum(SameDifferent == "different"),
+dprime = compute_dprime(hits, fas, n_hit, n_fa),
+.groups = "drop"
+)
 
 
+```
+d′ Plot (Paper-Style)
+
+```{r}
+dp_summary <- dp %>%
+group_by(Congruency, Alignment) %>%
+summarise(
+mean_dp = mean(dprime),
+se_dp = sd(dprime) / sqrt(n()),
+.groups = "drop"
+)
+
+ggplot(dp_summary, aes(x = Alignment, y = mean_dp, color = Congruency)) +
+geom_point(size = 3, position = position_dodge(width = 0.4)) +
+geom_errorbar(
+aes(ymin = mean_dp - se_dp, ymax = mean_dp + se_dp),
+width = 0.1,
+position = position_dodge(width = 0.4)
+) +
+labs(title = "Pilot B d′ by Congruency × Alignment",
+y = "d′ (Sensitivity)", x = "Alignment") +
+coord_cartesian(ylim = c(0, 2.5)) +
+theme_minimal(base_size = 14)
+
+```
+
+Pilot B confirmed that:
+- The reduced trial count produced cleaner, faster sessions.
+- All condition labels (Congruency, Alignment, Cue, SameDifferent) were correctly logged.
+- The expected Aligned–Incongruent cost appeared in both accuracy and RT.
+- No structural or timing bugs remained after adjustments from Pilot A.
+
+### Final Results
 ### Data preparation
 
 Data preparation following the analysis plan.
-	
+- Analyses were conducted on data from N = 50 participants after applying preregistered exclusion criteria (RT < 200 ms or > 3000 ms, incomplete trials). Only experimental composite trials were included. Accuracy, reaction time (RT), and sensitivity (d′) were analyzed following the same pipeline used in Pilot B.
+
 ```{r include=F}
 ### Data Preparation
 
 #### Load Relevant Libraries and Functions
 
+library(tidyverse)
+
 #### Import data
 
-#### Data exclusion / filtering
+data_dir <- "~/Downloads/compositeface_final/"
 
+files <- list.files(
+  path = data_dir,
+  pattern = "\\.csv$",
+  full.names = TRUE
+)
+
+length(files)   # should be 50
+
+raw <- files %>%
+  set_names() %>%
+  map_dfr(
+    ~ read_csv(.x, show_col_types = FALSE) %>%
+        mutate(Subject = basename(.x))
+  )
+
+length(unique(raw$Subject))  # should be 50
+
+```
+
+#### Data exclusion / filtering
+```{r}
+df <- raw %>%
+  filter(
+    trial_type == "image-keyboard-response",
+    !is.na(SameDifferent),
+    !is.na(Congruency),
+    !is.na(Alignment),
+    !is.na(Cue)
+  )
+
+dim(df)
+
+```
 #### Prepare data for analysis - create columns etc.
+```{r}
+df <- df %>%
+  mutate(
+    Subject = factor(Subject),
+    Congruency = factor(Congruency, levels = c("congruent", "incongruent")),
+    Alignment = factor(Alignment, levels = c("aligned", "misaligned")),
+    Cue = factor(Cue, levels = c("top", "bot")),
+    SameDifferent = factor(SameDifferent, levels = c("same", "different")),
+    Correct = as.numeric(Correct),
+    RT = as.numeric(RT)
+  )
+
+# RT exclusions
+df <- df %>% filter(RT > 200, RT < 3000)
+
+length(unique(df$Subject))  # should still be 50
+nrow(df)
+
 ```
 
 ### Confirmatory analysis
+#### Confirmatory analysis - Accuracy (GLMM)
+```{r}
+acc_model <- glmer(
+  Correct ~ Congruency * Alignment + (1 | Subject),
+  data = df,
+  family = binomial,
+  control = glmerControl(optimizer = "bobyqa")
+)
+summary(acc_model)
 
-The analyses as specified in the analysis plan.  
+```
+#### Confirmatory analysis - Reaction Time (LMER)
+```{r}
 
-*Side-by-side graph with original graph is ideal here*
+df <- df %>%
+  group_by(Subject) %>%
+  mutate(RT_z = scale(RT)[, 1]) %>%
+  ungroup()
+rt_model <- lmer(
+  RT_z ~ Congruency * Alignment + (1 | Subject),
+  data = df %>% filter(Correct == 1)
+)
+summary(rt_model)
+
+```
+#### d' analysis (sensitivity)
+```{r}
+compute_dprime <- function(hits, fas, n_hit, n_fa) {
+  hit_rate <- (hits + 0.5) / (n_hit + 1)
+  fa_rate  <- (fas + 0.5) / (n_fa + 1)
+  qnorm(hit_rate) - qnorm(fa_rate)
+}
+dp <- df %>%
+  group_by(Subject, Congruency, Alignment) %>%
+  summarise(
+    hits = sum(Correct == 1 & SameDifferent == "same"),
+    fas  = sum(Correct == 0 & SameDifferent == "different"),
+    n_hit = sum(SameDifferent == "same"),
+    n_fa  = sum(SameDifferent == "different"),
+    dprime = compute_dprime(hits, fas, n_hit, n_fa),
+    .groups = "drop"
+  )
+dp_summary <- dp %>%
+  group_by(Congruency, Alignment) %>%
+  summarise(
+    mean_dp = mean(dprime),
+    se_dp = sd(dprime) / sqrt(n()),
+    .groups = "drop"
+  )
+
+dp_summary
+
+```
+### Reaction Time plot
+```{r}
+rt_summary2 <- df %>%
+  filter(Correct == 1) %>%
+  group_by(Alignment, Congruency) %>%
+  summarise(
+    mean_rt = mean(RT),
+    se_rt = sd(RT) / sqrt(n()),
+    .groups = "drop"
+  )
+
+rt_summary2
+
+```
+```{r}
+ggplot(rt_summary2,
+       aes(x = Alignment,
+           y = mean_rt,
+           color = Congruency,
+           group = Congruency)) +
+  geom_point(size = 3, position = position_dodge(0.4)) +
+  geom_errorbar(
+    aes(ymin = mean_rt - se_rt,
+        ymax = mean_rt + se_rt),
+    width = 0.1,
+    position = position_dodge(0.4)
+  ) +
+  labs(
+    title = "Final Results: Reaction Time by Congruency × Alignment",
+    y = "RT (ms)",
+    x = "Alignment"
+  ) +
+  coord_cartesian(ylim = c(600, 1400)) +
+  theme_minimal(base_size = 14)
+
+
+```
+
+
+
+#### d' plot
+```{r}
+ggplot(dp_summary, aes(x = Alignment, y = mean_dp, color = Congruency)) +
+  geom_point(size = 3, position = position_dodge(0.4)) +
+  geom_errorbar(
+    aes(ymin = mean_dp - se_dp, ymax = mean_dp + se_dp),
+    width = 0.1,
+    position = position_dodge(0.4)
+  ) +
+  labs(
+    title = "Final Results: d′ by Congruency × Alignment",
+    x = "Alignment",
+    y = "d′ (Sensitivity)"
+  ) +
+  coord_cartesian(ylim = c(0, 2.5)) +
+  theme_minimal(base_size = 14)
+
+```
 
 ### Exploratory analyses
 
-Any follow-up analyses desired (not required).  
+#### Cue location effect analysis 
+```{r}
+cue_model <- glmer(
+  Correct ~ Congruency * Alignment * Cue + (1 | Subject),
+  data = df,
+  family = binomial,
+  control = glmerControl(optimizer = "bobyqa")
+)
+
+summary(cue_model)
+```
+
+```{r}
+# Accuracy per subject
+cue_subj <- df %>%
+  group_by(Subject, Cue, Congruency, Alignment) %>%
+  summarise(acc = mean(Correct), .groups = "drop")
+
+# Mean + SE across subjects
+cue_summary <- cue_subj %>%
+  group_by(Cue, Congruency, Alignment) %>%
+  summarise(
+    acc = mean(acc),
+    se  = sd(acc) / sqrt(n()),
+    .groups = "drop"
+  )
+
+cue_summary
+```
+```{r}
+ggplot(
+  cue_summary,
+  aes(
+    x = Alignment,
+    y = acc,
+    color = Congruency,
+    group = Congruency
+  )
+) +
+  geom_point(size = 3, position = position_dodge(0.4)) +
+  geom_errorbar(
+    aes(ymin = acc - se, ymax = acc + se),
+    width = 0.15,
+    size = 0.9,
+    position = position_dodge(0.4)
+  ) +
+  facet_wrap(~ Cue) +
+  labs(
+    title = "Accuracy by Congruency × Alignment × Cue",
+    y = "Accuracy",
+    x = "Alignment"
+  ) +
+  ylim(0.5, 1) +
+  theme_minimal(base_size = 14)
+```
+
 
 ## Discussion
 
 ### Summary of Replication Attempt
 
-Open the discussion section with a paragraph summarizing the primary result from the confirmatory analysis and the assessment of whether it replicated, partially replicated, or failed to replicate the original result.  
+The present study successfully replicated the core behavioral findings of Jin, Hayward, and Cheung (2024) using an online implementation of the complete composite face task. Sensitivity (d') was highest for aligned-congruent composites (M = 2.22, SE = 0.08) and lowest for aligned-incongruent composites (M = 0.73, SE = 0.08). Critically, the congruency effect -- defined as the difference between congruent and incongruent trials -- was substantially larger in the aligned condition (Δd' = 1.49) than in the misaligned condition (Δd' = 0.70), yielding a clear Congruency x Alignment interaction. This pattern closely mirrors the primary effect reported in the original study. 
 
 ### Commentary
 
-Add open-ended commentary (if any) reflecting (a) insights from follow-up exploratory analysis, (b) assessment of the meaning of the replication (or not) - e.g., for a failure to replicate, are the differences between original and present study ones that definitely, plausibly, or are unlikely to have been moderators of the result, and (c) discussion of any objections or challenges raised by the current and original authors about the replication attempt.  None of these need to be long.
+Reaction time differences across conditions were modest, consistent with Jin et al. (2024). Mean RTs ranged from approximately 1037-1124 ms, with aligned-incongruent trials slower than aligned-congruent trials by about 62 ms, and a smaller congruency-related difference under misalignment. This pattern suggests that the composite face effect was expressed primarily as a sensitivity cost rather than a pronounced slowing of responses. 
+
+Despite several methodological differences from the original study (smaller smaple size, reduced trial counts, exclusion of isolated-part baselines), the qualitative and quantitative patterns of results closely matched those previously reported. Exploratory analyses indicated that holistic interference effects were evident for both cue locations, with a stronger congruency effect observed for bottom-cued trials than for top-cued trials. However, this asymmetry was not a focus of the preregistered analyses and should be interpreted cautiously. Together, these findings indicate that the complete composite task provides a robust measure of holistic face processing that generalizes across various implementation.
